# NetScan

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  build-release.sh  build_rust.sh  docker-compose.yml  docker.sh  install.sh  netscan  package.json
.github/workflows/: activity-log.yml  static.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DOCKER.md  PERFORMANCE.md  SCANNING.md
docs/website/: api.html  changelog.html  cli-reference.html  configuration.html  contributing.html  docker.html  export.html  fingerprinting.html  index.html  installation.html  mac-lookup.html  monitoring.html  network-scanning.html  performance.html  quickstart.html  scheduler.html  security.html  topology.html  troubleshooting.html  usage.html  web-interface.html  wol.html
example/: devices.csv  macs.txt  network.json
helpers/: async_scanner.py  config_manager.py  export.py  export_helper.py  fast_core.py  fast_parser.py  fingerprint.py  mac_normalizer.py  monitor.py  network_helper.py  report_generator.py  scheduler.py  security.py  topology.py  vendor_cache.py  web_server.py  wol.py
installer/: build-installers.sh
lib/: config.sh  errors.sh  export.sh  loader.sh  logging.sh  parsers.sh  scanner.sh  search.sh  ui.sh  vendor.sh
netscan-gui/: README.md  main.js  package-lock.json  package.json  preload.js
netscan-gui/assets/: generate-icons.sh
netscan-gui/src/: index.html
rust_helpers/: Cargo.toml
rust_helpers/src/: lib.rs  scanner.rs
windows/: README.md  install.ps1  netscan.bat  netscan.ps1
windows/data/: .gitkeep
windows/helpers/: menu.py  (+5 more)
(+10 files in other folders)
